# OmniBox

./: .gitignore  README.md  build_check.bat  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: build-plugin-css.js
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  create_icons.py  tauri.conf.json
src-tauri/builtin-plugins/omnibox-calculator/: index.html  plugin.json
src-tauri/builtin-plugins/omnibox-notes/: index.html  plugin.json
src-tauri/builtin-plugins/omnibox-timestamp/: index.html  plugin.json
src-tauri/builtin-plugins/omnibox-translate/: index.html  plugin.json
src-tauri/src/: config_watcher.rs  lib.rs  main.rs  tray.rs  usage.rs  window.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: config.rs  mod.rs  plugin.rs  plugin_manage.rs  search.rs  sync.rs  system.rs
src-tauri/src/plugins/: calculator.rs  manager.rs  mod.rs  notes.rs  timestamp.rs  translate.rs
src-tauri/src/sync/: conflict.rs  mod.rs  webdav.rs
src-tauri/tests/: timestamp_tests.rs
src/assets/: plugin-daisy.css  plugin-sdk.js  plugin-theme.css
src/components/: FormatTable.tsx  PluginHost.tsx  SearchInput.tsx  SearchResultItem.tsx  SearchResults.tsx  ThemeProvider.tsx  TimestampRow.tsx
src/config/: colorSchemes.ts
src/stores/: index.ts  pluginStore.ts  searchStore.ts  themeStore.ts
src/types/: index.ts
src/views/: CalculatorView.tsx  NotesView.tsx  PluginMarketView.tsx  SearchView.tsx  SettingsView.tsx  SyncSettingsView.tsx  TimestampView.tsx  TranslateView.tsx
(+8 files in other folders)
