[package]
name = "omnibox"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
evalexpr = "11"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
notify = "7"
quick-xml = "0.37"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
